WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151731
Modern IDB: storage/indexeddb/cursor-advance.html fails
https://bugs.webkit.org/show_bug.cgi?id=151731
Summary
Modern IDB: storage/indexeddb/cursor-advance.html fails
Brady Eidson
Reported
2015-12-01 16:45:46 PST
Modern IDB: storage/indexeddb/cursor-advance.html fails It expects detailed error messages on the exceptions that are thrown. One of them we can match exactly. The others we'll give a good message for and then update the test results.
Attachments
Patch v1
(13.32 KB, patch)
2015-12-01 16:54 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch v2
(13.32 KB, patch)
2015-12-01 17:00 PST
,
Brady Eidson
beidson
: review-
beidson
: commit-queue-
Details
Formatted Diff
Diff
Patch v3
(15.36 KB, patch)
2015-12-03 11:12 PST
,
Brady Eidson
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(15.92 KB, patch)
2015-12-03 11:35 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-01 16:54:45 PST
Created
attachment 266411
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-01 16:55:30 PST
Attachment 266411
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMBinding.cpp:245: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3
2015-12-01 17:00:22 PST
Created
attachment 266412
[details]
Patch v2
Brady Eidson
Comment 4
2015-12-03 11:12:30 PST
Created
attachment 266537
[details]
Patch v3
Alex Christensen
Comment 5
2015-12-03 11:24:23 PST
Comment on
attachment 266537
[details]
Patch v3 View in context:
https://bugs.webkit.org/attachment.cgi?id=266537&action=review
r=me with one comment.
> Source/WebCore/bindings/js/JSDOMBinding.cpp:226 > +static JSValue createDOMException(ExecState* exec, ExceptionCode ec, const String& message)
Less duplicate code. Share with the original createDOMException.
Brady Eidson
Comment 6
2015-12-03 11:35:41 PST
Created
attachment 266539
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2015-12-03 12:07:16 PST
Comment on
attachment 266539
[details]
Patch for landing Clearing flags on attachment: 266539 Committed
r193364
: <
http://trac.webkit.org/changeset/193364
>
WebKit Commit Bot
Comment 8
2015-12-03 12:07:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug