Modern IDB: storage/indexeddb/cursor-advance.html fails. https://bugs.webkit.org/show_bug.cgi?id=151731

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/IDBCursor.h:
* Modules/indexeddb/IDBCursor.idl:

* Modules/indexeddb/client/IDBCursorImpl.cpp:
(WebCore::IDBClient::IDBCursor::advance): Return a custom exception message for TypeError.
* Modules/indexeddb/client/IDBCursorImpl.h:

* Modules/indexeddb/legacy/LegacyCursor.cpp:
(WebCore::LegacyCursor::advance):
* Modules/indexeddb/legacy/LegacyCursor.h:

* bindings/js/JSDOMBinding.cpp:
(WebCore::createDOMException):
(WebCore::setDOMException):
* bindings/js/JSDOMBinding.h:

* bindings/scripts/IDLAttributes.txt:

* inspector/InspectorIndexedDBAgent.cpp:

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/cursor-advance-expected.txt:


Canonical link: https://commits.webkit.org/169952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193364 268f45cc-cd09-0410-ab3c-d52691b4dbfc